# sentient

./: .env.example  .gitignore  LICENSE  README.md  cookbook.py  pyproject.toml  requirements.txt  test.py
sentient/: __init__.py  __main__.py
sentient/config/: config.py
sentient/core/agent/: agent.py  base.py
sentient/core/memory/: ltm.py
sentient/core/models/: models.py
sentient/core/orchestrator/: orchestrator.py
sentient/core/prompts/: prompts.py
sentient/core/skills/: __init__.py  click_using_selector.py  enter_date.py  enter_text_and_click.py  enter_text_using_selector.py  get_dom_with_content_type.py  get_screenshot.py  get_url.py  get_user_input.py  login_with_ravi.py  open_url.py  pdf_text_extractor.py  press_key_combination.py  upload_file.py
sentient/core/web_driver/: playwright.py
sentient/ravi/: ravi.py
sentient/task_instructions/: task_instructions.txt
sentient/user_preferences/: user_preferences.txt
sentient/utils/: _pydantic.py  cli_helper.py  dom_helper.py  dom_mutation_observer.py  extract_json.py  function_utils.py  get_detailed_accessibility_tree.py  logger.py  message_type.py  providers.py
