[tool.poetry]
name = "sentient"
version = "0.1.9"
description = ""
authors = ["nischalj10 <nischalj10@gmail.com>", "thebhulawat <namanbhulawat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pydantic = "^2.8.2"
pytest-playwright = "^0.5.1"
pdfplumber = "0.11.2"
typing-extensions = "^4.12.2"
ruff = "^0.5.6"
setuptools = "^72.1.0"
openai = "^1.40.1"
boto3 = "^1.34.157"
python-json-logger = "^2.0.7"
aiohttp = "^3.10.2"
colorama = "^0.4.6"
tiktoken = "^0.7.0"
termcolor = "^2.4.0"
tabulate = "^0.9.0"
langsmith = "^0.1.104"
instructor = "1.4.2"
python-dotenv = "^1.0.1"
google-generativeai = "^0.8.1"
groq = "^0.11.0"
jsonref = "^1.1.0"
eval-type-backport = "^0.2.0"
anthropic = "^0.34.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
